pdf function added
